# android-journey

CraneClone/: settings.gradle
CraneClone/app/: build.gradle
CraneClone/app/src/main/: AndroidManifest.xml
CraneClone/app/src/main/res/drawable/: custom_ripple.xml  outline_rect.xml
CraneClone/app/src/main/res/layout/: activity_main.xml  custom_tab_view.xml  fragment_screen_slide_page.xml
CraneClone/app/src/main/res/values-night/: themes.xml
CraneClone/gradle/wrapper/: gradle-wrapper.properties
KotlinCustomViews/: settings.gradle
KotlinCustomViews/app/: build.gradle
KotlinCustomViews/app/src/main/: AndroidManifest.xml
KotlinCustomViews/gradle/wrapper/: gradle-wrapper.properties
Test3D/: settings.gradle
Test3D/app/: build.gradle
Test3D/app/src/main/: AndroidManifest.xml
Test3D/app/src/main/assets/: fragment.glsl  lightFragment.glsl  screenquad.frag  screenquad.vert  vertex.glsl
Test3D/app/src/main/cpp/: CMakeLists.txt  gl3stub.c  shader.cpp  test3d.cpp
Test3D/app/src/main/cpp/include/: animation.h  animator.h  animdata.h  asset_extractor.h  assimp_glm_helpers.h  bone.h  camera.h  gl3stub.h  logger.h  mesh.h  model.h  native-lib.h  object_renderer.h  shader.h  util.h  viewfinder_renderer.h
Test3D/app/src/main/cpp/include/glm/: CMakeLists.txt
Test3D/app/src/main/cpp/include/glm/detail/: func_matrix.hpp
Test3D/gradle/wrapper/: gradle-wrapper.properties
composebasics/app/: build.gradle
composebasics/app/src/main/: AndroidManifest.xml
composebasics/gradle/wrapper/: gradle-wrapper.properties
globotour/: build.gradle  settings.gradle
globotour/app/: build.gradle
globotour/app/src/main/: AndroidManifest.xml
globotour/gradle/wrapper/: gradle-wrapper.properties
hellocompose/app/: build.gradle
hellocompose/app/src/main/: AndroidManifest.xml
hellocompose/gradle/wrapper/: gradle-wrapper.properties
(+85 files in other folders)
